force-app/main/default/objects/vlocity_ins__OrchestrationItemRelationship__c/vlocity_ins__OrchestrationItemRelationship__c.object-meta.xml
<CustomObject>
    <description>Generic Orchestration Item relationship. Mainly used during supplemental Order to maintain the continuity chain of dependencies.</description>
    <label>Orchestration Item Relationship</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Orchestration Item Relationship Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Orchestration Item Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>