force-app/main/default/objects/vlocity_ins__OrchestrationItemRelationship__c/fields/vlocity_ins__ItemId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ItemId__c</fullName>
    <label>Item</label>
    <referenceTo>vlocity_ins__OrchestrationItem__c</referenceTo>
    <relationshipLabel>Orchestration Item Relationships (Principal)</relationshipLabel>
    <relationshipName>OrchestrationItemRelationships</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>