force-app/main/default/objects/vlocity_ins__OrchestrationItemRelationship__c/fields/vlocity_ins__RelatedItemId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__RelatedItemId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Item</label>
    <referenceTo>vlocity_ins__OrchestrationItem__c</referenceTo>
    <relationshipLabel>Orchestration Item Relationships (Related)</relationshipLabel>
    <relationshipName>OrchestrationItemRelationshipsRelated</relationshipName>
    <type>Lookup</type>
</CustomField>